SERVER-18979: Duplicate uassert & fassert codes

(cherry picked from commit 8289f5481bff0da371d66191e40d611b12009cc5)